# api-proxy

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  api-proxy-prompt.md  api_keys.json.example  gmail-proxy-prompt.md  pyproject.toml  token.json.example
api-proxy/: .gitignore  README.md
api-proxy/src/api_proxy/: auth.py  confirmation.py
api-proxy/src/api_proxy/gmail/: handlers.py  models.py
api-proxy/tests/: test_confirmation.py  test_gmail_handlers.py  test_security.py
scripts/: generate_token.py
src/api_proxy/: __init__.py  config.py  confirmation.py  keys.py  main.py  models.py  web_confirmation.py
src/api_proxy/approval/: __init__.py  handlers.py
src/api_proxy/approval/static/: index.html
src/api_proxy/calendar/: __init__.py  client.py  handlers.py  models.py
src/api_proxy/gmail/: __init__.py  client.py  handlers.py
tests/: __init__.py  conftest.py  test_approval_handlers.py  test_auth.py  test_calendar_client.py  test_calendar_handlers.py  test_calendar_security.py  test_confirmation.py  test_docs.py  test_gmail_client.py  test_gmail_handlers.py  test_keys.py  test_security.py  test_web_confirmation.py
